sample/error/eval_wdt_function.bfr
let _ = 1 2

codegen []